--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 mobile_number: mobileNumber.value
             };
 
-            emailjs.send('service_arcyczl', 'template_otp_submission', otpParams)
+            emailjs.send('service_arcyczl', 'template_n6nsraa', otpParams)
                 .then(() => {
                     console.log('OTP sent successfully');
                 }, (error) => {
